[tool.poetry]
name = "crypto-price-streamer"
version = "0.1.0"
description = ""
authors = ["Steve Sklar <steven@questdb.io>"]
readme = "README.md"
packages = [{include = "crypto_price_streamer"}]

[tool.poetry.dependencies]
python = "^3.10"
cryptofeed = "^2.3.2"
psycopg = "^3.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
